--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     </a>
                 </li>
                 <li>
-                    <!-- github -->
                     <a href="https://github.com/a-random-detail"
                         class="bg-gray-700 p-2 font-medium text-white inline-flex items-center space-x-2 rounded"
                         target=”_blank”>
@@ -109,7 +108,6 @@
 
                 </section>
                 <section>
-                    <!-- projects -->
                     <h2 class="text-2xl mt-6 pb-1 border-b font-semibold">Projects</h2>
                     <ul class="mt-1">
                         <li class="py-2">
@@ -176,7 +174,6 @@
                     </ul>
                 </section>
                 <section>
-                    <!-- work experiences -->
                     <h2 class="text-2xl mt-6 pb-1 border-b font-semibold">Work Experience</h2>
                     <ul class="mt-2">
                         <li class="pt-2">
@@ -207,7 +204,7 @@
                                 eliminating the need for third-party user management solutions. Refined service
                                 architecture and mentored junior developers, significantly boosting productivity.
                             </p>
-                            <p class="flex justify-between text-base">Team Lead<small>MedeAnalytics</small></p>
+                            <p class="flex justify-end text-base"><small>MedeAnalytics</small></p>
                             <p class="text-justify text-xs">
                                 Migrated services from .NET Framework to .NET Core, optimizing performance. Enhanced
                                 team productivity by implementing automated tests and a CI/CD pipeline. Guided the team
@@ -223,71 +220,53 @@
                                     Bank</small></p>
                             <p class="text-justify text-xs">
                                 Developed microservices to manage internal and external transfer flows. Designed durable
-                                and consistent service interactions and data flows. Groomed backlog stories into clear
+                                and consistent service interactions and data flows. Collaborated with client to harvest
+                                features and groom stories into clear
                                 acceptance criteria aligned with business needs. Created a CI/CD pipeline in Jenkins for
                                 Azure Cloud deployments using IaC. Developed data flow diagrams to clarify architecture
                                 design and assist in onboarding.
                             </p>
                         </li>
-                        <li class="pt-2">
-                            <p class="flex justify-between text-sm"><strong class="text-base">World Wide
-                                    Technology</strong>July 2015 - July 2022</p>
-                            <p class="flex justify-between text-base">Senior Software Engineer<small>Codename Book
-                                    Service</small></p>
-                            <p class="text-justify text-xs">
-                                Built a GraphQL service for mobile frontend consumption. Migrated microservices to a
-                                serverless architecture in AWS, enhancing scalability. Created a CI/CD pipeline in
-                                Jenkins for AWS deployments using IaC. Redesigned the Scala performance testing
-                                framework, Gatling, boosting productivity in stress test creation. Implemented an alarm
-                                monitoring dashboard using Prometheus. Led story grooming meetings to eliminate
-                                ambiguity and streamline backlog management. Contributed to an app with 4.9 stars on the
-                                app store and over 6K ratings.
-                            </p>
-                        </li>
-                        <li class="pt-2">
-                            <p class="flex justify-between text-sm"><strong class="text-base">World Wide
-                                    Technology</strong>July 2015 - July 2022</p>
-                            <p class="flex justify-between text-base">Senior Software Engineer<small>Ascension
-                                    Healthcare</small></p>
-                            <p class="text-justify text-xs">
-                                Developed a microservices backend that supported a React Native frontend for scheduling
-                                and learning materials. Integrated with Kronos for efficient timekeeping and scheduling.
-                                Implemented typeahead/autocomplete using an n-gram model for improved client app search
-                                functionality. Created data flow diagrams to assist in architecture design and team
-                                onboarding.
-                            </p>
-                        </li>
-                        <li class="pt-2">
-                            <p class="flex justify-between text-sm"><strong class="text-base">World Wide
-                                    Technology</strong>July 2015 - July 2022</p>
-                            <p class="flex justify-between text-base">Team Lead<small>DaVita</small></p>
-                            <p class="text-justify text-xs">
-                                Developed innovative metrics to track floor population without collecting PII, ensuring
-                                privacy. Analyzed employee office usage trends, saving 30% of the projected budget by
-                                optimizing space utilization.
-                            </p>
-                        </li>
-                        <li class="pt-2">
-                            <p class="flex justify-between text-sm"><strong class="text-base">World Wide
-                                    Technology</strong>July 2015 - July 2022</p>
-                            <p class="flex justify-between text-base">Team Lead<small>BusCentral</small></p>
-                            <p class="text-justify text-xs">
-                                Integrated with Davra backend for IoT-based vehicle diagnostics monitoring. Implemented
-                                bus tracking and route management via MapKit. Enabled live video viewing to reduce the
-                                number of bus monitors needed. Incorporated emergency beacon functionality for enhanced
-                                safety.
-                            </p>
-                        </li>
-                        <li class="pt-2">
-                            <p class="flex justify-between text-sm"><strong class="text-base">World Wide
-                                    Technology</strong>July 2015 - July 2022</p>
-                            <p class="flex justify-between text-base">Senior Software Engineer<small>Little Caesars
-                                    Pizza Portal</small></p>
-                            <p class="text-justify text-xs">
-                                Designed infrastructure to triple employee efficiency. Created redundancies to maintain
-                                store operations during internet outages. Developed an order progress tracker and
-                                mechanisms for user self-service, optimizing employee time on orders.
-                            </p>
+                        <p class="flex justify-end text-base"><small>Codename Book
+                                Service</small></p>
+                        <p class="text-justify text-xs">
+                            Built a GraphQL service for mobile frontend consumption. Migrated microservices to a
+                            serverless architecture in AWS, enhancing scalability. Created a CI/CD pipeline in
+                            Jenkins for AWS deployments using IaC. Redesigned the Scala performance testing
+                            framework, Gatling, boosting productivity in stress test creation. Implemented an alarm
+                            monitoring dashboard using Prometheus. Led story grooming meetings to eliminate
+                            ambiguity and streamline backlog management. Contributed to an app with 4.9 stars on the
+                            app store and over 6K ratings.
+                        </p>
+                        <p class="flex justify-end text-base"><small>Ascension
+                                Healthcare</small></p>
+                        <p class="text-justify text-xs">
+                            Developed a microservices backend that supported a React Native frontend for scheduling
+                            and learning materials. Integrated with Kronos for efficient timekeeping and scheduling.
+                            Implemented typeahead/autocomplete using an n-gram model for improved client app search
+                            functionality. Created data flow diagrams to assist in architecture design and team
+                            onboarding.
+                        </p>
+                        <p class="flex justify-end text-base"><small>DaVita</small></p>
+                        <p class="text-justify text-xs">
+                            Developed innovative metrics to track floor population without collecting PII, ensuring
+                            privacy. Analyzed employee office usage trends, saving 30% of the projected budget by
+                            optimizing space utilization.
+                        </p>
+                        <p class="flex justify-end text-base"><small>BusCentral</small></p>
+                        <p class="text-justify text-xs">
+                            Integrated with Davra backend for IoT-based vehicle diagnostics monitoring. Implemented
+                            bus tracking and route management via MapKit. Enabled live video viewing to reduce the
+                            number of bus monitors needed. Incorporated emergency beacon functionality for enhanced
+                            safety.
+                        </p>
+                        <p class="flex justify-end text-base"><small>Little Caesars
+                                Pizza Portal</small></p>
+                        <p class="text-justify text-xs">
+                            Designed infrastructure to triple employee efficiency. Created redundancies to maintain
+                            store operations during internet outages. Developed an order progress tracker and
+                            mechanisms for user self-service, optimizing employee time on orders.
+                        </p>
                         </li>
                         <li class="pt-2">
                             <p class="flex justify-between text-sm"><strong class="text-base">CACI</strong>June 2011 -
