fix formatting for clients

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 eliminating the need for third-party user management solutions. Refined service
                                 architecture and mentored junior developers, significantly boosting productivity.
                             </p>
-                            <p class="flex flex-col md:flex-row md:justify-between text-base">
+                            <p class="flex flex-col md:flex-row md:justify-end text-base">
                                 <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                     MedeAnalytics</small>
                             </p>
@@ -241,7 +241,7 @@
                                 design and assist in onboarding.
                             </p>
                         </li>
-                        <p class="flex flex-col md:flex-row md:justify-between text-base">
+                        <p class="flex flex-col md:flex-row md:justify-end text-base">
                             <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                 Codename Book
                                 Service</small>
@@ -255,7 +255,7 @@
                             ambiguity and streamline backlog management. Contributed to an app with 4.9 stars on the
                             app store and over 6K ratings.
                         </p>
-                        <p class="flex flex-col md:flex-row md:justify-between text-base">
+                        <p class="flex flex-col md:flex-row md:justify-end text-base">
                             <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                 Ascension Healthcare</small>
                         </p>
@@ -266,7 +266,7 @@
                             functionality. Created data flow diagrams to assist in architecture design and team
                             onboarding.
                         </p>
-                        <p class="flex flex-col md:flex-row md:justify-between text-base">
+                        <p class="flex flex-col md:flex-row md:justify-end text-base">
                             <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                 DaVita</small>
                         </p>
@@ -275,7 +275,7 @@
                             privacy. Analyzed employee office usage trends, saving 30% of the projected budget by
                             optimizing space utilization.
                         </p>
-                        <p class="flex flex-col md:flex-row md:justify-between text-base">
+                        <p class="flex flex-col md:flex-row md:justify-end text-base">
                             <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                 BusCentral</small>
                         </p>
@@ -285,7 +285,7 @@
                             number of bus monitors needed. Incorporated emergency beacon functionality for enhanced
                             safety.
                         </p>
-                        <p class="flex flex-col md:flex-row md:justify-between text-base">
+                        <p class="flex flex-col md:flex-row md:justify-end text-base">
                             <small class="font-semibold text-slate-500 mt-3 md:mt-0">
                                 Little Caesars
                                 Pizza Portal</small>
