fix linkedin link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <ul class="flex flex-wrap justify-end gap-2 mb-5">
                 <li>
-                    <a href="www.linkedin.com/in/dalton-demaria-366a933a"
+                    <a href="https://www.linkedin.com/in/dalton-demaria-366a933a"
                         class="bg-blue-600 p-2 font-semibold text-white inline-flex items-center space-x-2 rounded"
                         target=”_blank”>
                         <svg class="w-5 h-5 fill-current" role="img" viewBox="0 0 256 256"
